fix overflow text

--- a/src/components/User.scss
+++ b/src/components/User.scss
@@ -59,6 +59,7 @@
     &--btm {
         color: #697c9a;
         line-height: 1.8;
+        overflow: hidden;
 
         @include tablet {
             margin-bottom: 1rem;
